Update favicon, index, service-details, and starter-page

--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>NGT Team</h3>
-                <h4>Team Members</h4>
+                <h3>Team Members</h3>
+                <h4>NexGenTeck</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
