--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
               <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Mr. Kaleem Usman</h4>
-                <span>Chief Executive Officer</span>
+                <span>CEO & Founder</span>
                 
               </div>
             </div>
@@ -848,7 +848,7 @@
               <div class="pic"><img src="assets/img/team/team-5.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Mr. Kashif Khan</h4>
-                <span>Admin</span>
+                <span>Team Coordinator</span>
               </div>
             </div>
           </div><!-- End Team Member -->
