--- a/starter-page.html
+++ b/starter-page.html
@@ -42,26 +42,30 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero">Home</a></li>
+          <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <!-- <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li> -->
           <li><a href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li><a href="#">Websites</a></li>
+              <li class="dropdown"><a href="#"><span>Graphic Designing</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="#">Mascot Logo</a></li>
+                  <li><a href="#">Business Logo</a></li>
+                  <li><a href="#">WordMark Logo</a></li>
                 </ul>
               </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <li class="dropdown"><a href="#">Mobile Applications<i class="bi bi-chevron-down toggle-dropdown"></i></a>
+               <ul>
+                  <li><a href="#">Android Applications</a></li>
+                  <li><a href="#">IOS Applications</a></li>
+                </ul>
+              
+              </li>
+              <li class="dropdown"><a href="#">Video Editing</a></li>
+              <li class="dropdown"><a href="#">Marketing</a></li>
             </ul>
           </li>
           <li><a href="#contact">Contact</a></li>
